[package]
name = "lilim_tts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full", "macros"] }
hound = "3.5"  # WAV file generation
llama_cpp_rs = "0.3"  # GGUF model loading
log = "0.4"
